--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,11 +5,11 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "learn",
+            "name": "learn_go",
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "./."
+            "program": "./cmd/main.go"
         }
     ]
 }
